# recipeboxv1

./: db.sqlite3  manage.py  pyproject.toml
homepage/: forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_author_favorites.py
recipeboxv1/: asgi.py  settings.py  urls.py  wsgi.py
templates/: add_author.html  author_detail.html  generic_form.html  index.html  recipe_detail.html
